[BT-372]: Add AddOnControl to LabeledFieldExample. Fix LabeledField spacing by setting .textInput to display: block.

--- a/src/framework/labeledField/_labeledField.scss
+++ b/src/framework/labeledField/_labeledField.scss
@@ -1,3 +1,4 @@
 .labeledField__label {
-  line-height: 10px;
+  line-height: $lineHeight;
+  margin-bottom: 3px;
 }
